# pi-joystick

./: .cache.mk  .gitignore  CMakeLists.txt  Makefile  README.md  audio.c  driver.c  driver.h  hori-s.h  joystick.c  joystick.h  joystick_driver.c  modprobe_ghid  pro-hid-descriptor.txt  switch-pro.h
gui/: .gitignore  README.md  app.py  index.html  package.json  renderer.py
gui/src/: App.vue  main.js  material.scss
gui/src/components/: Gamepad.vue
udev/: 50-joystick.rules
